--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,14 @@
             <artifactId>jackson-module-jaxb-annotations</artifactId>
             <version>2.11.2</version>
         </dependency>
+
+        <!-- File IO -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
