--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,3 +26,11 @@ spring:
     url: jdbc:mysql://<ip>:<port>/<DB_Name>?verifyServerCertificate=false&useSSL=false&allowMultiQueries=true
     username: root
     password: root
+
+amqp:
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
+    virtual-host: /
