--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <caffeine.version>2.7.0</caffeine.version>
         <mysql-connector-java.version>5.1.49</mysql-connector-java.version>
         <mybatis.version>2.2.2</mybatis.version>
+        <redisson.version>3.18.1</redisson.version>
     </properties>
     <dependencies>
         <dependency>
@@ -67,6 +68,14 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-pool2</artifactId>
+        </dependency>
+
+        <!-- redisson -->
+        <!-- https://mvnrepository.com/artifact/org.redisson/redisson-spring-boot-starter -->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>${redisson.version}</version>
         </dependency>
 
         <!--Jackson包-->
