--- a/pom.xml
+++ b/pom.xml
@@ -108,10 +108,10 @@
         </dependency>
 
         <!-- RabbitMQ -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
-        </dependency>
+        </dependency>-->
 
 
         <!-- Lucene Core -->
