--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,10 +9,17 @@ server:
 spring:
   application:
     name: springboot-project-scaffold
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
+
   redis:
     # redisTemplate
     host: 127.0.0.1
     port: 6379
+    # cluster:
+    #  nodes: 127.0.0.1:7000,127.0.0.1:7001,127.0.0.1:7002
+    #  max-redirects: 3
     password:
     database: 0
     lettuce:
@@ -41,10 +48,15 @@ spring:
   # 数据库配置信息,数据库字符集 utf8mb4
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/scaffold?verifyServerCertificate=false&useSSL=false&allowMultiQueries=true
+    url: jdbc:mysql://127.0.0.1:3306/scaffold?verifyServerCertificate=false&useSSL=false&allowMultiQueries=true&?allowPublicKeyRetrieval=true
     username: root
     password: root
-
+  jpa:
+    database: MySQL
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    show-sql: true
+    hibernate:
+      ddl-auto: update
 amqp:
   rabbitmq:
     host: 127.0.0.1
