--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,12 @@
             <version>8.11.0</version>
         </dependency>
 
+        <!-- javax.mail -->
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
     </dependencies>
 
     <build>
