--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,9 @@
         <java-jwt.version>3.11.0</java-jwt.version>
         <gson.version>2.9.1</gson.version>
         <jackson.version>2.11.2</jackson.version>
+        <minio.version>8.5.7</minio.version>
+        <!-- 配合 minio 提升版本 -->
+        <okhttp3.version>4.12.0</okhttp3.version>
     </properties>
     <dependencies>
         <dependency>
@@ -167,6 +170,13 @@
             <groupId>com.sun.mail</groupId>
             <artifactId>javax.mail</artifactId>
             <version>1.6.2</version>
+        </dependency>
+
+        <!-- minio -->
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>${minio.version}</version>
         </dependency>
     </dependencies>
 
