--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -72,3 +72,10 @@ amqp:
     username: guest
     password: guest
     virtual-host: /
+# 接口文档
+springdoc:
+  api-docs:
+    enabled: true
+    path: /api-docs
+  swagger-ui:
+    enabled: true
