--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -13,24 +13,10 @@ spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
-
-  redis:
-    # redisTemplate
-    host: 127.0.0.1
-    port: 6379
-    # cluster:
-    #  nodes: 127.0.0.1:7000,127.0.0.1:7001,127.0.0.1:7002
-    #  max-redirects: 3
-    password:
-    database: 0
-    lettuce:
-      pool:
-        max-active: 16
-        max-wait: 3000ms
-        max-idle: 16
-        min-idle: 0
   # redisson
   redisson:
+    # 是否使用 Redis 缓存，关闭则使用本地缓存
+    enable: true
     enableCluster: false
     password:
     connectionTimeout: 29999
