--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <!-- 配合 minio 提升版本 -->
         <okhttp3.version>4.12.0</okhttp3.version>
         <springdoc.version>1.8.0</springdoc.version>
+        <graalvm.version>22.3.5</graalvm.version>
     </properties>
     <dependencies>
         <dependency>
@@ -168,6 +169,24 @@
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>jakarta.el</artifactId>
+        </dependency>
+
+        <!-- JavaScript 运行环境-->
+        <dependency>
+            <groupId>org.graalvm.sdk</groupId>
+            <artifactId>graal-sdk</artifactId>
+            <version>${graalvm.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.graalvm.js</groupId>
+            <artifactId>js</artifactId>
+            <version>${graalvm.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.graalvm.js</groupId>
+            <artifactId>js-scriptengine</artifactId>
+            <version>${graalvm.version}</version>
         </dependency>
     </dependencies>
 
