--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <okhttp3.version>4.12.0</okhttp3.version>
         <springdoc.version>1.8.0</springdoc.version>
         <graalvm.version>22.3.5</graalvm.version>
+        <elasticsearch.version>7.6.2</elasticsearch.version>
     </properties>
     <dependencies>
         <dependency>
@@ -187,6 +188,13 @@
             <groupId>org.graalvm.js</groupId>
             <artifactId>js-scriptengine</artifactId>
             <version>${graalvm.version}</version>
+        </dependency>
+
+        <!-- elasticsearch -->
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+            <version>${elasticsearch.version}</version>
         </dependency>
     </dependencies>
 
