--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <okhttp3.version>4.12.0</okhttp3.version>
         <springdoc.version>1.8.0</springdoc.version>
         <graalvm.version>22.3.5</graalvm.version>
+        <lucene.version>8.4.0</lucene.version>
         <elasticsearch.version>7.6.2</elasticsearch.version>
     </properties>
     <dependencies>
@@ -114,30 +115,29 @@
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>-->
 
-
         <!-- Lucene Core -->
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-core</artifactId>
-            <version>8.11.0</version>
+            <version>${lucene.version}</version>
         </dependency>
         <!-- Lucene Query Parser -->
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-queryparser</artifactId>
-            <version>8.11.0</version>
+            <version>${lucene.version}</version>
         </dependency>
         <!-- Lucene Analyzer Common -->
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-analyzers-common</artifactId>
-            <version>8.11.0</version>
+            <version>${lucene.version}</version>
         </dependency>
         <!-- Lucene Memory Directory -->
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-memory</artifactId>
-            <version>8.11.0</version>
+            <version>${lucene.version}</version>
         </dependency>
 
         <!-- javax.mail -->
